# pynions

./: .coverage  .cursorrules  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  advanced.py  config.example.json  config.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  structure.txt
docs/: 00-index.md  01-project-structure.md  02-installation.md  03-configuration.md  04-plugins.md  05-workflows.md  06-debugging.md  ENV_SETUP.md  SETUP.md  changelog.md  configuration.md  data-organization.md  debugging.md  index.md  installation.md  mint.json  plugins.md  project-structure.md  quickstart.md  workers.md  workflows.md
docs/plugins/: jina.md  perplexity.md
examples/: content_workflow.py  monitor_flow.py  research_flow.py  simple.py  simple_test.py
examples/marketing_flows/: social_monitor.py
pynions/: __init__.py  core.py
pynions/plugins/: jina.py  litellm_plugin.py  perplexity.py  serper.py
pynions/scripts/: incremental_article_writer.py
pynions/tests/: test_perplexity.py
pynions/workers/: company_data_worker.py  perplexity_about_worker.py  perplexity_article_writer_worker.py  perplexity_benefits_worker.py  perplexity_best_practices_worker.py  perplexity_challenges_worker.py  perplexity_challenges_worker_v2.py  perplexity_definition_worker.py  perplexity_features_worker.py  perplexity_integrations_worker.py  perplexity_methodology_worker.py  perplexity_pricing_worker.py  perplexity_qa_worker.py  perplexity_trends_worker.py  perplexity_types_worker.py
pynions/workflows/: what_is_workflow.py
src/pynions/: __init__.py  cache.py  cli.py  flow.py  rate_limit.py  workflow.py
tests/: test_cli.py  test_flow.py  test_tools.py  test_workflow.py
tests/test_plugins/: test_serper_plugin.py
workflows/: example_workflow.py
(+8 files in other folders)
